nullaway_error_19844a4b-cba1-45ac-b376-538eea90660d.txt
/home/nima/Developer/nullness-benchmarks/spring-boot/spring-boot-project/spring-boot/src/main/java/org/springframework/boot/rsocket/context/RSocketServerBootstrap.java:54: error: [NullAway] dereferenced expression this.eventPublisher is @Nullable
		this.eventPublisher.publishEvent(new RSocketServerInitializedEvent(this.server));
		                   ^
    (see http://t.uber.com/nullaway )
